--- a/style/main.css
+++ b/style/main.css
@@ -40,7 +40,7 @@ header .container {
 .filme-principal {
   font-size: 20px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0.5) 100%),
-    url('/img/capa.jpg');
+    url('../img/capa.jpg');
   height: 500px;
   background-size: cover;
   display: flex;
